Add card design

--- a/index.html
+++ b/index.html
@@ -90,5 +90,20 @@
       <h1>Library</h1>
       <button type="button">Add Book</button>
     </header>
+    <main>
+      <div class="card">
+        <div class="card-container">
+          <div class="card-top">
+            <h2 class="title">Title of the book</h2>
+            <p class="author">Author</p>
+          </div>
+          <div class="card-bottom">
+            <p class="pages">Number of pages : 242</p>
+            <button type="button" class="btn-read read">READ</button>
+            <button type="button" class="btn-remove">REMOVE</button>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
