--- a/index.html
+++ b/index.html
@@ -90,21 +90,49 @@
       <h1>Library</h1>
       <button type="button">Add Book</button>
     </header>
-    <main>
-      <div class="card">
-        <div class="card-container">
-          <div class="card-top">
-            <h2 class="title">Title of the book</h2>
-            <p class="author">Author</p>
+    <main></main>
+    <div class="form-section">
+      <form action="" method="get">
+        <legend>Add a new book</legend>
+        <div class="form-container">
+          <div>
+            <label for="title">Title of the book*</label>
+            <input
+              type="text"
+              name="title"
+              id=""
+              placeholder="Title"
+              required
+            />
           </div>
-          <div class="card-bottom">
-            <p class="pages">Number of pages : 242</p>
-            <button type="button" class="btn-read read">READ</button>
-            <button type="button" class="btn-remove">REMOVE</button>
+          <div>
+            <label for="author">Author*</label>
+            <input
+              type="text"
+              name="author"
+              id=""
+              placeholder="Author"
+              required
+            />
           </div>
+          <div>
+            <label for="pages">Number of pages*</label>
+            <input
+              type="number"
+              name="pages"
+              id=""
+              placeholder="Number of pages"
+              required
+            />
+          </div>
+          <div>
+            <label for="read">Did you read the book ?</label>
+            <input type="checkbox" name="read" id="" />
+          </div>
+          <button type="submit">Add Book</button>
         </div>
-      </div>
-    </main>
+      </form>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
