--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <input
               type="text"
               name="title"
-              id=""
+              id="title"
               placeholder="Title"
               required
             />
@@ -110,7 +110,7 @@
             <input
               type="text"
               name="author"
-              id=""
+              id="author"
               placeholder="Author"
               required
             />
@@ -120,16 +120,16 @@
             <input
               type="number"
               name="pages"
-              id=""
+              id="pages"
               placeholder="Number of pages"
               required
             />
           </div>
           <div>
             <label for="read">Did you read the book ?</label>
-            <input type="checkbox" name="read" id="" />
+            <input type="checkbox" name="read" id="read-checkbox" />
           </div>
-          <button type="submit">Add Book</button>
+          <button type="button">Add Book</button>
         </div>
       </form>
     </div>
